[project]
name = "captcha-solver"
version = "1.0.0"
description = "A free, lightweight CAPTCHA solver using Tesseract OCR with advanced image preprocessing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Amey"}
]
requires-python = ">=3.8"
keywords = ["captcha", "ocr", "tesseract", "solver", "image-processing", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "flask>=2.0.0",
    "opencv-python-headless>=4.5.0",
    "numpy>=1.20.0",
    "pytesseract>=0.3.8",
    "Pillow>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/captcha-solver"
Repository = "https://github.com/YOUR_USERNAME/captcha-solver"
Issues = "https://github.com/YOUR_USERNAME/captcha-solver/issues"

[project.scripts]
captcha-solver = "solver_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
